--- a/neighborhood.html
+++ b/neighborhood.html
@@ -12,18 +12,22 @@
 
 <body>
   <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="neighborhood.html">Neighborhood Walks</a></li>
-        <li><a href="parks.html">Walks in the Park</a></li>
-      </ul>
-    </nav>
+    <a href="neighborhood.html" class="skip-link">Skip to Main Content</a>
+
+    <div class="img-index">
     <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
+  </div>
+  <nav>
+    <ul class="Lis">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="neighborhood.html">Neighborhood Walks</a></li>
+      <li><a href="parks.html">Walks in the Park</a></li>
+    </ul>
+  </nav>
     <h1>Neighborhood Walks</h1>
   </header>
   <main>
-    <div>
+    <div class="grid-container">
       <img src="images/bend_in_the_road.png"
         alt="a purple tree stands in contrast to the green leaved trees along a bend in the road" width="100">
       <img src="images/pink_blossoms.png" alt="small pink blossoms on an otherwise green leaved tree" width="100">
