--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
 
 <body>
   <header>
+    <main id="main-content">
+      <!-- your main content -->
+    </main>
+    <a href="index.html" class="skip-link">Skip to Main Content</a>
+    
+    <div class="img-index">
+      <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
+    </div>
     <nav>
-      <ul>
+      <ul class="Lis">
         <li><a href="index.html">Home</a></li>
         <li><a href="neighborhood.html">Neighborhood Walks</a></li>
         <li><a href="parks.html">Walks in the Park</a></li>
       </ul>
     </nav>
-    <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
-    <h1>Springtime in Michigan</h1>
+      <h1>Springtime in Michigan</h1>
   </header>
   <main>
     <p>Springtime in <a href="https://www.michigan.org/city/ann-arbor">Ann Arbor</a> is a beautiful time. Even though
@@ -41,4 +48,5 @@
 
 </body>
 
+</html>
 </html>
